add_executable(1695.Maximum_Erasure_Value 1695.Maximum_Erasure_Value.cpp)
add_executable(1957.Delete_Characters_to_Make_Fancy_String 1957.Delete_Characters_to_Make_Fancy_String.cpp)
add_executable(1948.Delete_Duplicate_Folders_in_System 1948.Delete_Duplicate_Folders_in_System.cpp)
add_executable(1717.Maximum_Score_From_Removing_Substrings 1717.Maximum_Score_From_Removing_Substrings.cpp)
add_executable(2322.Minimum_Score_After_Removals_on_a_Tree 2322.Minimum_Score_After_Removals_on_a_Tree.cpp)