add_executable(1695.Maximum_Erasure_Value 1695.Maximum_Erasure_Value.cpp)
add_executable(1957.Delete_Characters_to_Make_Fancy_String 1957.Delete_Characters_to_Make_Fancy_String.cpp)
add_executable(1948.Delete_Duplicate_Folders_in_System 1948.Delete_Duplicate_Folders_in_System.cpp)
add_executable(1717.Maximum_Score_From_Removing_Substrings 1717.Maximum_Score_From_Removing_Substrings.cpp)
add_executable(2322.Minimum_Score_After_Removals_on_a_Tree 2322.Minimum_Score_After_Removals_on_a_Tree.cpp)
add_executable(3169.Count_Days_Without_Meetings 3169.Count_Days_Without_Meetings.cpp)
add_executable(2680.Maximum_OR 2680.Maximum_OR.cpp)
add_executable(3487.Maximum_Unique_Subarray_Sum_After_Deletion 3487.Maximum_Unique_Subarray_Sum_After_Deletion.cpp)
add_executable(2278.Percentage_of_Letter_in_String 2278.Percentage_of_Letter_in_String.cpp)
add_executable(3341.Find_Minimum_Time_to_Reach_Last_Room_I 3341.Find_Minimum_Time_to_Reach_Last_Room_I.cpp)
add_executable(3480.Maximize_Subarrays_After_Removing_One_Conflicting_Pair 3480.Maximize_Subarrays_After_Removing_One_Conflicting_Pair.cpp)
add_executable(2210.Count_Hills_and_Valleys_in_an_Array 2210.Count_Hills_and_Valleys_in_an_Array.cpp)
add_executable(2044.Count_Number_of_Maximum_Bitwise-OR_Subsets 2044.Count_Number_of_Maximum_Bitwise-OR_Subsets.cpp)
add_executable(3342.Find_Minimum_Time_to_Reach_Last_Room_II 3342.Find_Minimum_Time_to_Reach_Last_Room_II.cpp)
add_executable(494.Target_Sum 494.Target_Sum.cpp)
add_executable(2411.Smallest_Subarrays_With_Maximum_Bitwise_OR 2411.Smallest_Subarrays_With_Maximum_Bitwise_OR.cpp)